[project]
name = "markdown-to-pdf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "celery>=5.6.3",
    "celery-types>=0.26.0",
    "fastapi[standard]>=0.136.1",
    "markdown>=3.10.2",
    "markdown2>=2.5.5",
    "pydantic>=2.13.3",
    "redis>=7.4.0",
    "uvicorn>=0.46.0",
    "weasyprint>=68.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
